# manos

./: .gitignore  buildlion.sh  configure.ac
src/: Makefile.am  Manos.sln
src/Manos/: .gitignore  Makefile.am  Makefile.include  Manos.csproj  Manos.userprefs  packages.config
src/Manos.IO/: Makefile.am  Manos.IO.csproj
src/Manos.Tests/: .gitignore  Makefile.am  Manos.Tests.csproj  manos.tests.pc.in  packages.config
src/Manos.Tests/Manos/: AppHostTest.cs  InfiniteRepeatBehaviorTest.cs  IterativeRepeatBehaviorTest.cs  ManosModuleTest.cs  RepeatBehaviorTest.cs
src/Manos.Tests/Manos.Caching/: ManosInProcCacheTest.cs
src/Manos.Tests/Manos.Collections/: DataDictionaryTest.cs
src/Manos.Tests/Manos.Http/: HttpCookieTest.cs  HttpHeadersTest.cs  HttpRequestTest.cs  HttpResponseStreamTest.cs  RequestDataDictionaryTest.cs
src/Manos.Tests/Manos.Routing/: ActionTargetTest.cs  HtmlFormDataTypeConverterTest.cs  ManosTargetTest.cs  MatchOperationFactoryTest.cs  NopMatchOperationTest.cs  ParameterizedActionTargetTest.cs  ParameterizedActionTest.cs  RegexMatchOperationTest.cs  RouteHandlerTest.cs  SimpleMatchOperationTest.cs  StringMatchOperationTest.cs
src/Manos.Tests/Manos.Spdy/: GeneratorTests.cs  ParserTests.cs
src/Manos.Tests/Manos.Template/: CodegenTest.cs  TemplateFactoryTest.cs
src/Manos.Tests/Nunit-Extensions/: Nunit_Extension_Methods.cs
src/libeio/: config.h
src/libev/: config.h
src/libmanos/: Makefile.am  config.h  config.h.in  manos.c  manos.h  manos_libev.c  manos_socket.c  manos_tls.c
src/manostool/: .gitignore  AssemblyInfo.cs  AssemblyInfo.cs.in  (+15 more)
(+205 files in other folders)
